# SSAO

./: .gitignore  10.3.planet.fs  9.ssao_geometry.fs  9.ssao_geometry.vs  9.ssao_lighting copy.fs  9.ssao_lighting.fs  CMakeLists.txt  CMakeLists的副本.txt  annotation.hpp  glad.c  grabber.h  graham.hpp  main.cpp  readme.md  root_directory.h  ssao_blur.fs  ssao_geometry.vs  ssao_geometry_floor.fs  ssao_lighting.fs
asset/: vertex_truncated_octahedrons.mtl.mtl
include/glad/: glad.h
include/learnopengl/: camera.h  model.h
shaders/: ssao.fs  ssao_blur.fs  ssao_geometry.fs  ssao_lighting.fs
